--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="mt-6 pt-6 border-t border-zinc-700">
                  <h2 class="text-lg font-semibold mb-3 text-zinc-200">Effects</h2>
                  <div>
-                    <label for="vignette-select" class="text-sm text-gray-400 mb-1 block">Style</label>
+                    <label for="vignette-select" class="text-sm text-zinc-400 mb-1 block">Style</label>
                     <select id="vignette-select" class="w-full p-2 border border-zinc-600 rounded-md bg-zinc-700 text-zinc-200 focus:ring-indigo-500 focus:border-indigo-500">
                         <option value="0">Full Bleed</option>
                         <option value="1">Vignette</option>
